--- a/style.css
+++ b/style.css
@@ -69,11 +69,23 @@ footer p {
 }
 
 
+.section-1 {
+  background-image: url('https://placeimg.com/1000/500/any')
+}
+.section-2 {
+  background-image: url('https://placeimg.com/1000/500/grayscale')
+}.section-3 {
+  background-image: url('https://placeimg.com/1000/500/animals')
+}.section-4 {
+  background-image: url('https://placeimg.com/1000/500/architecture')
+}.section-5 {
+  background-image: url('https://placeimg.com/1000/500/any')
+}
 /*
 .section-1 {
   background-image: url('https://placeimg.com/1000/500/any')
 }
-*/
+
 
 .section-1 {
 	background-color: #003554;
@@ -89,3 +101,4 @@ footer p {
 .section-4 {
 	background-color: #CA895F;
 }
+*/
